5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1836_2604.log
== TEST (2019-07-01 12:52:23) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: "))) 


pr = zeros(shape(mat)[1],dtype=int)

for i in range(shape(mat)[1]):
	pr[i]= sum(mat[:,i])
	
for i in range(size(pr)):
	if pr[i]==max(dias):
		print(pr)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:52:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: "))) 


pr = zeros(shape(mat)[1],dtype=int)

for i in range(shape(mat)[1]):
	pr[i]= sum(mat[:,i])
	
for i in range(size(pr)):
	if pr[i]==max(pr):
		print(pr)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:53:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: "))) 




for i in range(shape(mat)[1]):
	pr[i]= sum(mat[:,i])
	
for i in range(size(pr)):
	if pr[i]==max(pr):
		print(pr)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:54:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: "))) 



	
for i in range(size(pr)):
	if pr[i]==max(pr):
		print(pr)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:02:48) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: "))) 


for j in range(size(shap(mat)[1])):
	for i in range(7):
		mat[:j]==max[:j]
		print(j)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:03:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: "))) 


for j in range(size(shap(mat)[1])):
	for i in range(7):
		mat[:j]==max[:j]
		print(mat(j))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:20:53) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: "))) 


for j in range(size(shap(mat)[1])):
	for i in range(7):
		mat[i:j]==max[:,j]
		print(mat(j))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:21:14) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: "))) 


for j in range(size(shape(mat)[1])):
	for i in range(7):
		mat[i:j]==max[:,j]
		print(mat(j))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:21:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: "))) 


for j in range(size(shape(mat)[1])):
	for i in range(7):
		mat[i:j]==max[i:j]
		print(mat(j))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:22:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: "))) 


for j in range(size(shape(mat)[1])):
	for i in range(7):
			if mat[i:j]==max[i:j]:
			print(mat(j))
	
-- ERROR:
File "XXXX", line 10
    print(mat(j))
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:22:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: "))) 


for j in range(size(shape(mat)[1])):
	for i in range(7):
			if mat[i:j]==max[i:j]:
				print(mat(j))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:23:17) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: "))) 


for j in range(size(shape(mat)[1])):
	for i in range(7):
			if mat[i:j]==max(mat[i:j]):
				print(mat(j))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:23:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: "))) 


for j in range(size(shape(mat)[1])):
	for i in range(7):
			if mat[i:j]==max(mat):
				print(mat(i:j))
	
-- ERROR:
File "XXXX", line 10
    print(mat(i:j))
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:24:06) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: "))) 


for j in range(size(shape(mat)[1])):
	for i in range(7):
			if mat[i:j]==max(mat):
				print(mat[i:j])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:26:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: "))) 


for j in range(size(shape(mat)[1])):
	for i in range(7):
		vet = zeros,(dtype=float)
		mat[i:j] = vet
		print(max(vet))
	
-- ERROR:
File "XXXX", line 9
    vet = zeros,(dtype=float)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:27:40) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: "))) 


for j in range(size(shape(mat)[1])):
	for i in range(7):
		vet = zeros(7,dtype=float)
		mat[i:j] = vet
		print(max(vet))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:27:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: "))) 


for j in range(size(shape(mat)[1])):
	for i in range(7):
		vet = zeros(7,dtype=float)
		mat[i:j] = vet[j]
		print(max(vet))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:29:26) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: "))) 


for j in range(size(shape(mat)[1])):
	for i in range(7):
		vet = zeros(7,dtype=float)
		vet[j]= mat[j,:]
		print(max(vet))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:30:23) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: "))) 


for j in range(size(shape(mat)[1])):
	for i in range(7):
		vet = zeros(7,dtype=float)
		vet[i]= mat[i,:]
		print(max(vet))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 14:33:03) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: "))) 


for i in range(7):
	for j in range(size(shape(mat)[1])):
		vet = zeros(7,dtype=float)
		vet[i]= mat[i,:]
		print(max(vet))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 14:35:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: "))) 


for i in range(7):
	for j in range(size(shape(mat)[1])):
		vet = zeros(7,dtype=float)
		vet[i]= mat[i,:]
		print(vet)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 14:35:39) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: "))) 


for i in range(7):
	for j in range(size(shape(mat)[1])):
		vet = zeros(7,dtype=float)
		vet[i]= mat[i,:]
		print(vet)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 14:40:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: "))) 


for j in range(shape(mat)[0]):
	vet = zeros(shape(mat)[0],dtype=int)
	vet[j]= (mat[j,:])
	print(max(vet))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 14:42:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: "))) 
vet = zeros(shape(mat)[0],dtype=int)

for j in range(shape(mat)[0]):
	vet[j]= (mat[j,:])
	print(max(vet))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 14:44:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: "))) 
vet = zeros(shape(mat)[0],dtype=int)

for j in range(shape(mat)[0]):
	x = (mat[j,:])
	print(max(x))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 14:44:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: "))) 
vet = zeros(shape(mat)[0],dtype=int)

for j in range(shape(mat)[0]):
	x = (mat[j,:])
	print(max(x))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 14:44:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: "))) 
vet = zeros(shape(mat)[0],dtype=int)

for j in range(shape(mat)[0]):
	x = (mat[j,:])
	print(max(x))
	
-- EXECUTION TIME:
0.967768
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
89.7
99.9
93.1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
